--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/png" href="/src/assets/Window-Finance-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clarity AMM+</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+    </style>
   </head>
   <body>
     <div id="root"></div>
